Adds option to completely remove restrictions on registrations.

--- a/sp_debat.css
+++ b/sp_debat.css
@@ -14,6 +14,11 @@
   border-color: #f60000;
 }
 
+.sp_debat_del_button.not-guaranteed {
+  background-color: #fff;
+  color: #f60000;
+}
+
 .messages {
   margin-top: 1em;
   font-size: 1.14em;
